--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -57,7 +57,7 @@ font-weight: bold;
     gap: 1rem;
 }
 .nav_flex_top p {
-color:#818181;
+color:#000;
 }
 .nav_flex_top h6 {
     color:#000;
@@ -166,6 +166,10 @@ padding: 10px;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  }
+  .home_two_right li {
+    font-size: 1rem;
+    font-weight: 600;
   }
   .home_two_left {
     display: flex;
