--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1931,6 +1931,7 @@ gap: 1rem;
     .home_two_left_rlative {
       width: 100%;
     }
+    
   }
 
   @media only screen and (max-width: 362px) {
@@ -1968,4 +1969,16 @@ gap: 1rem;
 }
   .img_wrapper .inner_img {
    width: 100%;height: 200px
+  }
+
+  @media only screen and (max-width: 600px) {
+
+    
+    .card_home aside {
+    width: 100%;
+    }
+  }
+  .l {
+    width: 40px !important;
+    height: 40px !important;
   }
