--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -160,16 +160,16 @@ padding: 10px;
     gap:2rem;
     font-weight: 600;
     width: 500px;
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
   .home_two_right ul {
     display: flex;
     flex-direction: column;
     gap: 1rem;
   }
-  .home_two_right li {
+  .home_two_right p {
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 500;
   }
   .home_two_left {
     display: flex;
